--- a/Projekt-Speisekarte/.htaccess
+++ b/Projekt-Speisekarte/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine On
 
 
-RewriteBase /Wifi/Wifi-JWE-22/Projekt-Speisekarte/
+RewriteBase /Wifi-JWE-22/Projekt-Speisekarte/
+# Kommentare beginnen mit Route
+# RewriteBase /Wifi/Wifi-JWE-22/Projekt-Speisekarte/
 
 RewriteRule ^\/?api\/? apiv2.php
